# crop-disease-mlops

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yaml  ci-tf.yaml  ci.yaml
airflow/: README.md  docker-compose.yaml
airflow/dags/: monitoring_dag.py  training_pipeline.py
api/: Dockerfile  README.md  main.py  predict.py  pyproject.toml
infrastructure/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/modules/ecr/: main.tf  outputs.tf  variables.tf
infrastructure/modules/lambda/: main.tf  outputs.tf  variables.tf
infrastructure/modules/s3/: main.tf  outputs.tf  variables.tf
monitoring/: README.md  docker-compose.yaml
monitoring/config/: grafana_dashboards.yaml  grafana_datasources.yaml
monitoring/dashboards/: drift_dashboard.json
notebooks/: README.md  notebooks_README.md  train_colab.ipynb
src/data/: preprocess.py
src/model/: train.py
src/monitoring/: drift.py
tests/integration/: run.sh  test_api.py  test_lambda_local.py
tests/unit/: test_drift.py  test_predict.py  test_preprocess.py
