[project]
name = "crop-disease-mlops"
version = "0.1.0"
description = "End-to-end MLOps pipeline for crop disease detection using EfficientNet-B0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlflow>=2.17.2",
    "boto3>=1.37.38",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "onnxruntime>=1.19.0",
    "pillow>=10.4.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "evidently>=0.4.33",
    "pandas>=2.2.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "mangum>=0.21.0",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "black>=24.8.0",
    "isort>=5.13.2",
    "pylint>=3.2.7",
    "pre-commit>=3.8.0",
    "deepdiff>=8.0.0",
]
training = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
multi_line_output = 3
length_sort = true
profile = "black"

[tool.pylint.main]
ignore = [".venv", "__pycache__", "notebooks", "infrastructure", "airflow"]
disable = ["C0114", "C0115", "C0116", "C0412", "W0621"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
