[project]
name = "crop-disease-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "mangum>=0.21.0",
    "onnxruntime>=1.19.0",
    "pillow>=10.4.0",
    "numpy>=1.26.0",
    "boto3>=1.37.38",
    "python-multipart>=0.0.32",
    "python-dotenv>=1.0.1",
    "mlflow>=2.17.2",
    "requests>=2.32.0",
    "psycopg2-binary>=2.9.9",
]
